# dlr_ros_course

./: README.md
dlr_docker/: README.cartographer.md  README.md
dlr_docker/dlr_ros_google_cartographer/: Dockerfile  Dockerfile.bionic
dlr_gazebo_plugins/: CMakeLists.txt  package.xml
dlr_gazebo_plugins/src/: gazebo_ros_planar_move.cpp
dlr_gazebo_world/: CMakeLists.txt  package.xml
dlr_gazebo_world/launch/: spawn_canal_bridges.launch  spawn_canal_bridges_world.launch  spawn_urdf.launch  spawn_world.launch
dlr_gazebo_world/meshes/: canal_bridge.stl  canal_bridge1.stl  canal_bridge_2.stl
dlr_gazebo_world/models/canal2/: model.config  model.sdf
dlr_gazebo_world/models/canal2/materials/scripts/: bricks.material
dlr_gazebo_world/urdf/: canal_bridge.urdf.xacro
dlr_gazebo_world/worlds/: canal_bridge.world  dlr_canal_bridge.world
dlr_mapping/dlr_cartographer/: CMakeLists.txt  README.md  package.xml
dlr_mapping/dlr_cartographer/config/: cartographer.perspective  dlr_vessel_2d.lua  dlr_vessel_3d.lua
dlr_mapping/dlr_cartographer/launch/: dlr_vessel_2d.launch  dlr_vessel_3d.launch  dlr_vessel_3d_localization.launch
dlr_mapping/dlr_gmapping/: CMakeLists.txt  README.md  package.xml
dlr_mapping/dlr_gmapping/launch/: dlr_vessel.launch  gmapping.launch
dlr_mapping/dlr_gmapping/rviz/: dlr_vessel_gmapping.rviz
dlr_mapping/dlr_mapping/: CMakeLists.txt  package.xml
dlr_mapping/dlr_rtab_mapping/: CMakeLists.txt  README.md  package.xml
dlr_mapping/dlr_rtab_mapping/config/: gmapping.perspective
dlr_mapping/dlr_rtab_mapping/launch/: dlr_vessel.launch  rtab_mapping.launch
dlr_msgs/: CMakeLists.txt  package.xml
dlr_msgs/msg/: VesselState.msg
dlr_ros_course/: CMakeLists.txt  package.xml
dlr_ros_utils/: CMakeLists.txt  package.xml
dlr_ros_utils/bags/: sensor_data.bag
dlr_ros_utils/config/: rqt_multiplot_imu_data.xml
dlr_ros_utils/examples/: CMakeLists.txt  package.xml
dlr_ros_utils/launch/: example.launch
dlr_ros_utils/scripts/: process_rosbag.m  teleop_twist_keyboard.py  tf_broadcaster.py  tf_listener.py  time_example.py
dlr_ros_utils/src/: tcp_receiver.cpp  tcp_sender.cpp  tf_broadcaster.cpp  tf_listener.cpp  time_example.cpp
dlr_sensors/: CMakeLists.txt  package.xml
dlr_sensors/config/: fake_gps.yaml
dlr_sensors/include/dlr_sensors/: FakeGPS.h  FakeIMU.h
dlr_sensors/launch/: sensor_support_visualization.launch  sensors_example.launch  stereolab_zed2.launch  velodyne_example.launch
dlr_sensors/robots/: dlr_acq_campaign_sensors.xacro
dlr_sensors/rviz/: velodyne_visualization.rviz
dlr_sensors/scripts/: fake_gps_sensor_class_node.py  fake_gps_sensor_node.py  gps_listener_node.py
dlr_sensors/src/: FakeGPS.cpp  FakeIMU.cpp  fake_gps_sensor_class_node.cpp  fake_gps_sensor_node.cpp  fake_imu_sensor_node.cpp  gps_listener_node.cpp
dlr_sensors/urdf/: GNSS_MTi_680G.urdf.xacro  stereolabs_zed2.urdf.xacro  stereolabs_zed2_standalone.xacro
dlr_vessel_description/: CMakeLists.txt  README.md  package.xml
dlr_vessel_description/config/: dlr_vessel_sim.perspective
dlr_vessel_description/launch/: dlr_vessel.launch  spawn_dlr_vessel.launch
dlr_vessel_description/meshes/: patrol_boat.stl
dlr_vessel_description/robots/: dlr_vessel.xacro  dlr_vessel2.xacro
dlr_vessel_description/rviz/: vessel_sim_visualization.rviz  vessel_visualization.rviz
dlr_vessel_description/urdf/: dlr_vessel.urdf.xacro
