<?xml version="1.0"?>
<package format="2">

  <name>dlr_gazebo_world</name>
  <version>0.0.1</version>
  <description>This is dlr_gazebo_world package. It launches a Gazebo world containing a canal and a bridge </description>

  <author email="mattialeonori26@gmail.com">Mattia Leonori</author>

  <maintainer email="mattialeonori26@gmail.com">Mattia Leonori</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>

</package>
