<?xml version="1.0"?>
<package format="2">

  <name>dlr_msgs</name>
  <version>0.0.1</version>
  <description>This is dlr_msgs package. It contains different custom messages, services and actions</description>

  <author email="mattialeonori26@gmail.com">Mattia Leonori</author>

  <maintainer email="mattialeonori26@gmail.com">Mattia Leonori</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Add these two lines if you have custom msgs, srvs or actions -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>

  <exec_depend>velodyne_description</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>

</package>

