<?xml version="1.0"?>
<package format="2">
  <name>dlr_ros_course</name>
  <version>0.0.1</version>
  <description> DLR ROS course metapackage </description>

  <author email="mattialeonori26@gmail.com">Mattia Leonori</author>

  <maintainer email="mattialeonori26@gmail.com">Mattia Leonori</maintainer>

  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>dlr_vessel_description</exec_depend>
  <exec_depend>dlr_gazebo_world</exec_depend>
  <exec_depend>dlr_gazebo_plugin</exec_depend>
  <exec_depend>dlr_sensors</exec_depend>
  <exec_depend>dlr_ros_utils</exec_depend>
  <exec_depend>dlr_msgs</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
