<?xml version="1.0"?>
<package format="2">

  <name>dlr_ros_utils</name>
  <version>0.0.1</version>
  <description>This is dlr_ros_utils package. It contains ROS utils</description>

  <author email="mattialeonori26@gmail.com">Mattia Leonori</author>

  <maintainer email="mattialeonori26@gmail.com">Mattia Leonori</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>

  <exec_depend>teleop_twist_keyboard</exec_depend>

</package>
