<?xml version="1.0"?>
<package format="2">

  <name>dlr_rtab_mapping</name>
  <version>0.0.1</version>
  <description>This is dlr_rtab_mapping package. It launches RTAB mapping mapping</description>

  <author email="mattialeonori26@gmail.com">Mattia Leonori</author>

  <maintainer email="mattialeonori26@gmail.com">Mattia Leonori</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslaunch</depend>
  <exec_depend>rtabmap_ros</exec_depend>

</package>
